--- a/src/DarkApp.css
+++ b/src/DarkApp.css
@@ -1850,6 +1850,7 @@ font-weight: 400;
   position: absolute;
   top: -120%;
   left: 10%;
+  opacity: 20%;
 }
 .darkcoffee2 {
   width: 5000px;
@@ -1857,6 +1858,7 @@ font-weight: 400;
   position: absolute;
   top: -120%;
   left: 20%;
+  opacity: 20%;
 }
 .darkcoffee3 {
   width: 5000px;
@@ -1864,6 +1866,7 @@ font-weight: 400;
   position: absolute;
   top: -120%;
   left: 20%;
+    opacity: 20%;
 }
 
 
